--- a/src/styles/documentation.css
+++ b/src/styles/documentation.css
@@ -5,7 +5,9 @@
     --white: #ffffff;
     --gray: #a2a2a2;
     --blue: #0066ff;
+    --light-blue: #87b1ef;
     --blue-active: rgba(0,102,255,0.5);
+    --titanium: #7f9497;
     --dark-gray: #1e1e1e;
     --mid-gray: #464646;
     --light-gray: #5e5e5e;
@@ -31,19 +33,32 @@
 }
 
 .main-container {
-    width: 90%;
+    width: 85%;
 }
 .header {
     margin: 0;
     padding: 0;
     padding-bottom: 2rem;
     margin-top: 1rem;
+    font-size: 3rem;
+}
+.iphone {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    width: 100%;
+    height: 90%;
+}
+.iphone > * {
+    width: 90%;
+    height: 90%;
 }
 .mtc {
     font-weight: 500;
     padding: 0;
     margin: 0;
-    padding-bottom: 0.5rem;
+    padding-bottom: 1rem;
+    font-size: 2rem;
 }
 .main-par {
     margin: 0;
@@ -51,20 +66,25 @@
     font-weight: 600;
     color: var(--light-gray);
     padding-bottom: 2rem;
+    font-size: 1.5rem;
 }
 .doc-carousel {
     width: 90%;
+    height: 50rem;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    justify-content: space-between;
+    padding-left: 2rem;
+    padding-top: 1.5rem;
     gap: 1rem;
     padding-bottom: 2rem;
 }
 .doc-card {
     flex-shrink: 0;
-    width: 26rem;
-    aspect-ratio: 5/6;
-    border-radius: 1.5rem;
+    width: 24rem;
+    aspect-ratio: 4/7;
+    border-radius: 1.8rem;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -72,10 +92,34 @@
     justify-content: space-between;
     background-color: var(--white);
     object-fit: contain;
+    transition: transform 200ms ease-in-out;
+}
+.doc-card:hover {
+    transform: scale(105%);
+}
+.card-2 {
+    background-color: var(--dark-plain);
+    color: var(--white);
+    justify-content: flex-start;
+    gap: 3rem;
+}
+.card-2 .text-sub {
+    color: var(--light-slate);
+}
+.card-3 {
+    background: linear-gradient(var(--light-blue), var(--white));
+    color: var(--dark-plain);
+}
+.card-3 .text-sub {
+    color: var(--dark-slate);
+}
+.lock {
+    font-size: 300px;
+    color: var(--titanium);
 }
 .cards {
     display: flex;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 .buttons {
     display: flex;
@@ -101,10 +145,11 @@
     color: var(--gray-blend);
 }
 .text-header {
-    font-size: 2.5rem;
+    font-size: 2rem;
     padding: 0;
     margin: 0;
     padding-top: 2rem;
+    font-weight: 600 !important;
 }
 .text {
     text-align: center;
@@ -115,11 +160,12 @@
     font-weight: 600;
 }
 .text-sub {
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 0;
     margin: 0;
     padding-top: 1rem;
     color: var(--light-gray);
+    padding-inline: 1.8rem;
 }
 .doc-card > img {
     width: 100%;
