--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -46,6 +46,7 @@
 .overlay {
     width: 100%;
     height: inherit;
+    /* change this */
     display: flex;
     flex-direction: column;
     justify-content: space-between !important;
@@ -57,6 +58,12 @@
 }
 .phone-time {
     font-size: 0.8rem;
+}
+.cta-title {
+    padding: 0;
+    margin: 0;
+    font-size: 2.5rem;
+    padding-block: 1rem 2rem;
 }
 .home-nav-bar {
     width: 35%;
@@ -81,7 +88,8 @@
     border-block: 1px solid var(--slate);
     padding: 1.8rem;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin-top: 1rem;
 }
 .dynamic-island {
