--- a/src/styles/documentation.css
+++ b/src/styles/documentation.css
@@ -5,7 +5,7 @@
     --white: #ffffff;
     --gray: #a2a2a2;
     --blue: #0066ff;
-    --light-blue: #87b1ef;
+    --light-blue: #a7c7f7;
     --blue-active: rgba(0,102,255,0.5);
     --titanium: #7f9497;
     --dark-gray: #1e1e1e;
@@ -107,7 +107,7 @@
     color: var(--light-slate);
 }
 .card-3 {
-    background: linear-gradient(var(--light-blue), var(--white));
+    background: linear-gradient(var(--light-blue) 60%, var(--white));
     color: var(--dark-plain);
 }
 .card-3 .text-sub {
@@ -151,6 +151,9 @@
     padding-top: 2rem;
     font-weight: 600 !important;
 }
+.card-1 .text-header {
+    color: var(--black);
+}
 .text {
     text-align: center;
     display: flex;
@@ -169,4 +172,23 @@
 }
 .doc-card > img {
     width: 100%;
+}
+.icon {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
+    padding-bottom: 1.5rem;
+}
+.card-4 {
+    background: linear-gradient(var(--indigo), var(--white));
+}
+.card-4 .text-header {
+    color: var(--white);
+}
+.card-4 .text-sub, .text-header {
+    color: var(--not-white);
 }
