--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,6 +43,14 @@
     user-select: none;
     box-shadow: 45px 30px 40px var(--light-gray);
 }
+.warning-text {
+    font-size: 1.2rem;
+    padding: 0;
+    margin: 0;
+    padding-top: 2.5rem;
+    font-weight: 500;
+    color: var(--gray);
+}
 .overlay {
     width: 100%;
     height: inherit;
@@ -69,7 +77,7 @@
     width: 35%;
     z-index: 100;
     border-radius: 2rem;
-    padding-block: 0.1rem;
+    padding-block: 0.15rem;
     align-self: center;
     background-color: var(--white);
     pointer-events: auto;
