--- a/src/styles/doc-vid.css
+++ b/src/styles/doc-vid.css
@@ -80,14 +80,17 @@
 .video-player-full {
     position: absolute;
     display: flex;
+    display: none;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
-    height: 150%;
+    height: 100%;
+    top: 0;
     left: 0;
     background: var(--not-white);
-    /* display: none; */
+}
+.video-player-full.show-video-container {
+    display: flex !important;
 }
 .header-full {
     width: 80%;
@@ -95,7 +98,6 @@
     justify-content: space-between;
     align-items: center;
     font-size: 2rem;
-    padding-top: 2rem;
 }
 .close-button {
     background-color: var(--gray);
