--- a/src/styles/doc-vid.css
+++ b/src/styles/doc-vid.css
@@ -52,21 +52,26 @@
     font-size: 3rem;
     font-weight: 500;
     color: var(--mid-gray);
-    padding-bottom: 4rem;
+    padding-bottom: 3rem;
 }
 .container-video {
     background-color: var(--light-slate);
     width: 95vw;
     aspect-ratio: 14/6;
-    border-radius: 2rem;
+    border-radius: 2.5rem;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    padding: 1rem;
+    overflow: hidden;
+    transition: transform 450ms ease-in-out;
+}
+.container-video:hover {
+    transform: scale(100.5%);
 }
 .toggle-video-big {
+    margin: 1rem;
     color: var(--white);
-    background-color: var(--gray);
+    background-color: rgba(162,162,162,0.7);
     width: 4rem;
     height: 4rem;
     font-size: 2rem;
@@ -76,6 +81,7 @@
     border-radius: 50%;
     padding-left: 5px;
     color: var(--not-white);
+    position: absolute;
 }
 .video-player-full {
     position: absolute;
@@ -87,7 +93,12 @@
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 100;
     background: var(--not-white);
+}
+.video-player {
+    width: 100%;
+    height: 100%;
 }
 .video-player-full.show-video-container {
     display: flex !important;
@@ -113,8 +124,35 @@
 }
 .video-container-full {
     width: 80%;
-    aspect-ratio: 16/9;
+    aspect-ratio: 17/9;
     background-color: var(--black);
 }
-  
-  
+.table-temp {
+    border: 1px solid pink;
+    margin-top: 5rem;
+    width: 100%;
+    aspect-ratio: 16/9;
+    padding-top: 2rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.table-temp > * {
+    display: flex;
+    flex-direction: row;
+    padding-inline: 1.5rem;
+}
+.headers > * {
+    border-inline: 2px solid var(--light-gray);
+    padding: 0.5rem 1.5rem;
+    outline: 2px solid var(--light-gray);
+    font-size: 1.2rem;
+    font-weight: 500;   
+}
+.entry > * {
+    border-inline: 2px solid var(--light-gray);
+    padding: 0.5rem 1.5rem;
+    outline: 2px solid var(--light-gray);
+    font-size: 1rem;
+    font-weight: 400;
+}
