--- a/src/styles/main-app.css
+++ b/src/styles/main-app.css
@@ -9,6 +9,7 @@
     --blue-active: rgba(0,102,255,0.5);
     --dark-gray: #1e1e1e;
     --mid-gray: #464646;
+    --schist: #373737;
     --light-gray: #5e5e5e;
     --dark-plain: #121212;
     --gray-blend: #282828;
@@ -473,6 +474,7 @@
 }
 .bookings-container {
     padding-inline: 0.5rem;
+    transition: transform 200ms ease-in-out;
 }
 .booking-container {
     display: flex;
@@ -542,6 +544,13 @@
     justify-content: center;
     align-items: center;
 }
+.action-buttons {
+    display: flex;
+}
+.update-button {
+    color: var(--white);
+    background-color: var(--indigo);
+}
 .booking-go-back {
     display: flex;
     align-items: center;
@@ -585,6 +594,84 @@
 .no-book-home {
     color: var(--blue) !important;
     text-decoration: underline;
+}
+.bookings-container.scale-out {
+    transform: scale(95%);
+}
+.update-wrapper {
+    display: none;
+    width: 100%;
+    height: 43rem;
+    top: 0;
+    left: 0;
+    position: absolute;
+    padding-top: 4rem;
+    justify-content: center;
+    align-items: flex-end;
+}
+.update-wrapper.visible {
+    display: flex;
+}
+.update-container {
+    width: 100%;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    background-color: var(--dark-slate);
+    padding-inline: 1rem;
+    padding-bottom: 2rem;
+    padding-top: 0.5rem;
+    animation: slide-up 300ms ease-in-out;
+    justify-content: space-between;
+    border-radius: 1rem 1rem 0 0;
+}
+.update-complete {
+    background-color: var(--schist);
+    margin-bottom: 2rem;
+    margin-inline: 0.5rem;
+    padding: 0.8rem 1rem;
+    border-radius: 0.8rem;
+    display: flex;
+    justify-content: center;
+    color: var(--gray);
+    font-weight: 500;
+}
+.update-complete.enable {
+    background-color: var(--blue);
+    color: var(--white);
+}
+.cancel {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    padding-top: 0.5rem;
+    color: var(--blue);
+    font-weight: 600;
+}
+.cancel > p {
+    padding: 0;
+    margin: 0;
+}
+.update-title {
+    padding: 0;
+    margin: 0;
+    font-weight: 600;
+    font-size: 1.3rem;
+    padding-block: 1rem;
+    margin-block: 2rem 0.5rem;
+}
+.nickname-booking {
+    background-color: var(--schist);
+    padding: 0.6rem 0.5rem;
+    color: var(--white);
+    outline: none;
+    border: none;
+    border-radius: 0.5rem;
+    font-size: 1.1rem;
+    font-family: inherit;
+    font-weight: 500;
+    width: 100%;
+    transition: transform 200ms ease-in-out;
 }
 @keyframes slide-up {
     to {
