changed styling of bookings update

--- a/src/styles/main-app.css
+++ b/src/styles/main-app.css
@@ -531,7 +531,7 @@
     color: var(--gray);
 }
 .book-date {
-    color: var(--indigo);
+    color: var(--yellow);
     text-decoration: underline;
 }
 .cancel-button {
